--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
   <body>
     <!-- Hero Star -->
+     <div class="tinggi">
+      
+     </div>
     <section
       id="hero"
       class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center"
@@ -59,7 +62,7 @@
     <!-- end finis -->
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-md bg-transparent sticky-top mynavbar">
+    <nav class="navbar navbar-expand-md bg-transparent fixed-top mynavbar">
       <div class="container">
         <a class="navbar-brand" href="#">Sandika</a>
         <button
